WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts

TODO: rxvt -font 10x20 -xrm "*.tabbed.font: 10x20" -pe tabbed
      how does one affect the tab windows themselves? seems not to work anymore.

TODO: implement initial chdir for tabs by making it a resource?
	- work around fedore 9 prividing isastream but not the relevant
          header file for it (report by Tuncer Ayaz).
	- upgrade to libev-3.31, fixing a bug in the select backend
          with more than 31 file descriptors on non-linux 64 bit systems.
	- correctly reset the multibyte state to the initial one
          after EILSEQ (patch by Neil Booth). This fixes the
          issue of rxvt-unicode not properly displaying text after an illegal
          sequence on NetBSD and probably other systems.
        - implement ESC [ 3 K as a more rational alternative to ESC [ 0 K.
	- made tabs moveable (based on a patch by Petr Machata).
        - support relative paths for RXVT_SOCKET in urxvtd.
        - better diagnostic on 0x0 window geometries.
        - update Anyevent API to version 3.4 and above.
        - document the default value of :0 for DISPLAY.

9.02 Tue Jan 29 11:58:36 CET 2008
	- the "exg makes everybody happy" release.
	- fix build with !xft.
	- always compile in plain style scrollbar (simplifies code and looks great).

9.01 Sat Jan 26 20:49:27 CET 2008
	- be more aggressive about handling X events, this seems to be required
          with newer xlibs (should fix the "screen stays black until event is
          received" problem, again :)
	- add buffered resource to control xft double-buffering.

9.0  Fri Jan 25 19:34:04 CET 2008
	- fix a crash bug where urxvtd would crash when urxvtc was called
          with wrong arguments (I wish debian maintainers in general would
          report bugs and their proposed fixes to the original package maintaienrs