@@ -825,28 +825,8 @@ RXVT-UNICODE/URXVT FREQUENTLY ASKED QUESTIONS
 
        infocmp -C rxvt-unicode
 
-    Or you could use this termcap entry, generated by the command above:
-
-       rxvt-unicode|rxvt-unicode terminal (X Window System):\
-               :am:bw:eo:km:mi:ms:xn:xo:\
-               :co#80:it#8:li#24:lm#0:\
-               :AL=\E[%dL:DC=\E[%dP:DL=\E[%dM:DO=\E[%dB:IC=\E[%d@:\
-               :K1=\EOw:K2=\EOu:K3=\EOy:K4=\EOq:K5=\EOs:LE=\E[%dD:\
-               :RI=\E[%dC:SF=\E[%dS:SR=\E[%dT:UP=\E[%dA:ae=\E(B:al=\E[L:\
-               :as=\E(0:bl=^G:cd=\E[J:ce=\E[K:cl=\E[H\E[2J:\
-               :cm=\E[%i%d;%dH:cr=^M:cs=\E[%i%d;%dr:ct=\E[3g:dc=\E[P:\
-               :dl=\E[M:do=^J:ec=\E[%dX:ei=\E[4l:ho=\E[H:\
-               :i1=\E[?47l\E=\E[?1l:ic=\E[@:im=\E[4h:\
-               :is=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;3;4;6l\E[4l:\
-               :k1=\E[11~:k2=\E[12~:k3=\E[13~:k4=\E[14~:k5=\E[15~:\
-               :k6=\E[17~:k7=\E[18~:k8=\E[19~:k9=\E[20~:kD=\E[3~:\
-               :kI=\E[2~:kN=\E[6~:kP=\E[5~:kb=\177:kd=\EOB:ke=\E[?1l\E>:\
-               :kh=\E[7~:kl=\EOD:kr=\EOC:ks=\E[?1h\E=:ku=\EOA:le=^H:\
-               :mb=\E[5m:md=\E[1m:me=\E[m\017:mr=\E[7m:nd=\E[C:rc=\E8:\
-               :sc=\E7:se=\E[27m:sf=^J:so=\E[7m:sr=\EM:st=\EH:ta=^I:\
-               :te=\E[r\E[?1049l:ti=\E[?1049h:ue=\E[24m:up=\E[A:\
-               :us=\E[4m:vb=\E[?5h\E[?5l:ve=\E[?25h:vi=\E[?25l:\
-               :vs=\E[?25h:
+    Or you could use the termcap entry in doc/etc/rxvt-unicode.termcap,
+    generated by the command above.
 
    Why does "ls" no longer have coloured output?
     The "ls" in the GNU coreutils unfortunately doesn't use terminfo to
@@ -1078,7 +1058,7 @@ RXVT-UNICODE/URXVT FREQUENTLY ASKED QUESTIONS
     wchar_t. This is, of course, completely fine with respect to standards.
 
     However, that means rxvt-unicode only works in "POSIX", "ISO-8859-1" and
-    "UTF-8" locales under FreeBSD (which all use Unicode as wchar_t.
+    "UTF-8" locales under FreeBSD (which all use Unicode as wchar_t).
 
     "__STDC_ISO_10646__" is the only sane way to support multi-language apps
     in an OS, as using a locale-dependent (and non-standardized)
