@@ -195,9 +195,9 @@ CONFIGURE OPTIONS
           verbose X error handling
 
     --enable-iso14755 (default: on)
-        Enable extended ISO 14755 support (see rxvt(1), or doc/rxvt.1.txt).
-        Basic support (section 5.1) is enabled by "--enable-frills", while
-        support for 5.2, 5.3 and 5.4 is enabled with this switch.
+        Enable extended ISO 14755 support (see rxvt(1)). Basic support
+        (section 5.1) is enabled by "--enable-frills", while support for
+        5.2, 5.3 and 5.4 is enabled with this switch.
 
     --enable-keepscrolling (default: on)
         Add support for continual scrolling of the display when you hold the
@@ -227,14 +227,14 @@ CONFIGURE OPTIONS
         Add support to have the pointer disappear when typing or inactive.
 
     --enable-perl (default: on)
-        Enable an embedded perl interpreter. See the rxvtperl(3) manpage
-        (doc/rxvtperl.txt) for more info on this feature, or the files in
-        src/perl-ext/ for the extensions that are installed by default. The
-        perl interpreter that is used can be specified via the "PERL"
-        environment variable when running configure. Even when compiled in,
-        perl will *not* be initialised when all extensions have been
-        disabled "-pe "" --perl-ext-common """, so it should be safe to
-        enable from a resource standpoint.
+        Enable an embedded perl interpreter. See the rxvtperl(3) manpage for
+        more info on this feature, or the files in src/perl/ for the
+        extensions that are installed by default. The perl interpreter that
+        is used can be specified via the "PERL" environment variable when
+        running configure. Even when compiled in, perl will *not* be
+        initialised when all extensions have been disabled "-pe ""
+        --perl-ext-common """, so it should be safe to enable from a
+        resource standpoint.
 
     --with-afterimage-config=DIR
         Look for the libAfterImage config script in DIR.
