@@ -132,7 +132,7 @@
 .\" ========================================================================
 .\"
 .IX Title "@@RXVT_NAME@@ 7"
-.TH @@RXVT_NAME@@ 7 "2008-01-29" "9.02" "RXVT-UNICODE"
+.TH @@RXVT_NAME@@ 7 "2008-06-15" "@@RXVT_VERSION@@" "RXVT-UNICODE"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -1158,30 +1158,8 @@ like this:
 \&   infocmp \-C rxvt\-unicode
 .Ve
 .PP
-Or you could use this termcap entry, generated by the command above:
-.PP
-.Vb 10
-\&   rxvt\-unicode|rxvt\-unicode terminal (X Window System):\e
-\&           :am:bw:eo:km:mi:ms:xn:xo:\e
-\&           :co#80:it#8:li#24:lm#0:\e
-\&           :AL=\eE[%dL:DC=\eE[%dP:DL=\eE[%dM:DO=\eE[%dB:IC=\eE[%d@:\e
-\&           :K1=\eEOw:K2=\eEOu:K3=\eEOy:K4=\eEOq:K5=\eEOs:LE=\eE[%dD:\e
-\&           :RI=\eE[%dC:SF=\eE[%dS:SR=\eE[%dT:UP=\eE[%dA:ae=\eE(B:al=\eE[L:\e
-\&           :as=\eE(0:bl=^G:cd=\eE[J:ce=\eE[K:cl=\eE[H\eE[2J:\e
-\&           :cm=\eE[%i%d;%dH:cr=^M:cs=\eE[%i%d;%dr:ct=\eE[3g:dc=\eE[P:\e
-\&           :dl=\eE[M:do=^J:ec=\eE[%dX:ei=\eE[4l:ho=\eE[H:\e
-\&           :i1=\eE[?47l\eE=\eE[?1l:ic=\eE[@:im=\eE[4h:\e
-\&           :is=\eE[r\eE[m\eE[2J\eE[H\eE[?7h\eE[?1;3;4;6l\eE[4l:\e
-\&           :k1=\eE[11~:k2=\eE[12~:k3=\eE[13~:k4=\eE[14~:k5=\eE[15~:\e
-\&           :k6=\eE[17~:k7=\eE[18~:k8=\eE[19~:k9=\eE[20~:kD=\eE[3~:\e
-\&           :kI=\eE[2~:kN=\eE[6~:kP=\eE[5~:kb=\e177:kd=\eEOB:ke=\eE[?1l\eE>:\e
-\&           :kh=\eE[7~:kl=\eEOD:kr=\eEOC:ks=\eE[?1h\eE=:ku=\eEOA:le=^H:\e
-\&           :mb=\eE[5m:md=\eE[1m:me=\eE[m\e017:mr=\eE[7m:nd=\eE[C:rc=\eE8:\e
-\&           :sc=\eE7:se=\eE[27m:sf=^J:so=\eE[7m:sr=\eEM:st=\eEH:ta=^I:\e
-\&           :te=\eE[r\eE[?1049l:ti=\eE[?1049h:ue=\eE[24m:up=\eE[A:\e
-\&           :us=\eE[4m:vb=\eE[?5h\eE[?5l:ve=\eE[?25h:vi=\eE[?25l:\e
-\&           :vs=\eE[?25h:
-.Ve
+Or you could use the termcap entry in doc/etc/rxvt\-unicode.termcap,
+generated by the command above.
 .PP
 \fIWhy does \f(CI\*(C`ls\*(C'\fI no longer have coloured output?\fR
 .IX Subsection "Why does ls no longer have coloured output?"
@@ -1461,7 +1439,7 @@ does it support it. Instead, it uses its own internal representation of
 \&\fBwchar_t\fR. This is, of course, completely fine with respect to standards.
 .PP
 However, that means rxvt-unicode only works in \f(CW\*(C`POSIX\*(C'\fR, \f(CW\*(C`ISO\-8859\-1\*(C'\fR and
-\&\f(CW\*(C`UTF\-8\*(C'\fR locales under FreeBSD (which all use Unicode as \fBwchar_t\fR.
+\&\f(CW\*(C`UTF\-8\*(C'\fR locales under FreeBSD (which all use Unicode as \fBwchar_t\fR).
 .PP
 \&\f(CW\*(C`_\|_STDC_ISO_10646_\|_\*(C'\fR is the only sane way to support multi-language
 apps in an \s-1OS\s0, as using a locale-dependent (and non-standardized)
@@ -1754,6 +1732,8 @@ l l .
 Ps = 0	Clear to Right (default)
 Ps = 1	Clear to Left
 Ps = 2	Clear All
+Ps = 3	Like Ps = 0, but is ignored when wrapped
+                	(@@RXVT_NAME@@ extension)
 .TE
 .ie n .IP "\fB\fB""ESC [ Ps L""\fB\fR" 4
 .el .IP "\fB\f(CBESC [ Ps L\fB\fR" 4
@@ -2321,6 +2301,9 @@ load \fBmona.jpg\fR with a scaling of 100%
 .IX Item "E]20;;200;?a"
 rescale the current pixmap to 200% and display the image geometry in
 the title
+.PP
+
+.IX Xref "Mouse"
 .SH "Mouse Reporting"
 .IX Header "Mouse Reporting"
 .ie n .IP "\fB\fB""ESC [ M <b> <x> <y>""\fB\fR" 4
@@ -2357,6 +2340,9 @@ Col = \fB\f(CB\*(C`<x> \- SPACE\*(C'\fB\fR
 Row = \fB\f(CB\*(C`<y> \- SPACE\*(C'\fB\fR
 .SH "Key Codes"
 .IX Header "Key Codes"
+
+.IX Xref "KeyCodes"
+.PP
 Note: \fBShift\fR + \fBF1\fR\-\fBF10\fR generates \fBF11\fR\-\fBF20\fR
 .PP
 For the keypad, use \fBShift\fR to temporarily override Application-Keypad
@@ -2624,10 +2610,9 @@ It also enables some non-essential features otherwise disabled, such as:
 .Ve
 .IP "\-\-enable\-iso14755 (default: on)" 4
 .IX Item "--enable-iso14755 (default: on)"
-Enable extended \s-1ISO\s0 14755 support (see @@RXVT_NAME@@(1), or
-\&\fIdoc/rxvt.1.txt\fR). Basic support (section 5.1) is enabled by
-\&\f(CW\*(C`\-\-enable\-frills\*(C'\fR, while support for 5.2, 5.3 and 5.4 is enabled with
-this switch.
+Enable extended \s-1ISO\s0 14755 support (see @@RXVT_NAME@@(1)).
+Basic support (section 5.1) is enabled by \f(CW\*(C`\-\-enable\-frills\*(C'\fR, while
+support for 5.2, 5.3 and 5.4 is enabled with this switch.
 .IP "\-\-enable\-keepscrolling (default: on)" 4
 .IX Item "--enable-keepscrolling (default: on)"
 Add support for continual scrolling of the display when you hold
@@ -2658,11 +2643,11 @@ Add support to have the pointer disappear when typing or inactive.
 .IP "\-\-enable\-perl (default: on)" 4
 .IX Item "--enable-perl (default: on)"
 Enable an embedded perl interpreter. See the \fB@@RXVT_NAME@@\f(BIperl\fB\|(3)\fR
-manpage (\fIdoc/rxvtperl.txt\fR) for more info on this feature, or the
-files in \fIsrc/perl\-ext/\fR for the extensions that are installed by
-default. The perl interpreter that is used can be specified via the
-\&\f(CW\*(C`PERL\*(C'\fR environment variable when running configure. Even when compiled
-in, perl will \fInot\fR be initialised when all extensions have been disabled
+manpage for more info on this feature, or the files in \fIsrc/perl/\fR
+for the extensions that are installed by default.
+The perl interpreter that is used can be specified via the \f(CW\*(C`PERL\*(C'\fR
+environment variable when running configure. Even when compiled in,
+perl will \fInot\fR be initialised when all extensions have been disabled
 \&\f(CW\*(C`\-pe "" \-\-perl\-ext\-common ""\*(C'\fR, so it should be safe to enable from a
 resource standpoint.
 .IP "\-\-with\-afterimage\-config=DIR" 4
@@ -2689,12 +2674,3 @@ Marc Lehmann <rxvt@schmorp.de> converted this document to pod and
 reworked it from the original Rxvt documentation, which was done by Geoff
 Wing <gcw@pobox.com>, who in turn used the XTerm documentation and other
 sources.
-.SH "POD ERRORS"
-.IX Header "POD ERRORS"
-Hey! \fBThe above document had some coding errors, which are explained below:\fR
-.IP "Around line 2681:" 4
-.IX Item "Around line 2681:"
-=back doesn't take any parameters, but you said =back  X<Mouse>
-.IP "Around line 2759:" 4
-.IX Item "Around line 2759:"
-=back doesn't take any parameters, but you said =back  X<KeyCodes>
