@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.35
+.\" Automatically generated by Pod::Man 2.16 (Pod::Simple 3.05)
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -25,11 +25,11 @@
 ..
 .\" Set up some character translations and predefined strings.  \*(-- will
 .\" give an unbreakable dash, \*(PI will give pi, \*(L" will give a left
-.\" double quote, and \*(R" will give a right double quote.  | will give a
-.\" real vertical bar.  \*(C+ will give a nicer C++.  Capital omega is used to
-.\" do unbreakable dashes and therefore won't be available.  \*(C` and \*(C'
-.\" expand to `' in nroff, nothing in troff, for use with C<>.
-.tr \(*W-|\(bv\*(Tr
+.\" double quote, and \*(R" will give a right double quote.  \*(C+ will
+.\" give a nicer C++.  Capital omega is used to do unbreakable dashes and
+.\" therefore won't be available.  \*(C` and \*(C' expand to `' in nroff,
+.\" nothing in troff, for use with C<>.
+.tr \(*W-
 .ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
 .ie n \{\
 .    ds -- \(*W-
@@ -48,22 +48,25 @@
 .    ds R" ''
 'br\}
 .\"
+.\" Escape single quotes in literal strings from groff's Unicode transform.
+.ie \n(.g .ds Aq \(aq
+.el       .ds Aq '
+.\"
 .\" If the F register is turned on, we'll generate index entries on stderr for
 .\" titles (.TH), headers (.SH), subsections (.Sh), items (.Ip), and index
 .\" entries marked with X<> in POD.  Of course, you'll have to process the
 .\" output yourself in some meaningful fashion.
-.if \nF \{\
+.ie \nF \{\
 .    de IX
 .    tm Index:\\$1\t\\n%\t"\\$2"
 ..
 .    nr % 0
 .    rr F
 .\}
-.\"
-.\" For nroff, turn off justification.  Always turn off hyphenation; it makes
-.\" way too many mistakes in technical documents.
-.hy 0
-.if n .na
+.el \{\
+.    de IX
+..
+.\}
 .\"
 .\" Accent mark definitions (@(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2).
 .\" Fear.  Run.  Save yourself.  No user-serviceable parts.
@@ -129,7 +132,11 @@
 .\" ========================================================================
 .\"
 .IX Title "@@RXVT_NAME@@ 1"
-.TH @@RXVT_NAME@@ 1 "2007-12-15" "8.8" "RXVT-UNICODE"
+.TH @@RXVT_NAME@@ 1 "2008-06-15" "@@RXVT_VERSION@@" "RXVT-UNICODE"
+.\" For nroff, turn off justification.  Always turn off hyphenation; it makes
+.\" way too many mistakes in technical documents.
+.if n .ad l
+.nh
 .SH "NAME"
 @@RXVT_NAME@@d \- @@RXVT_NAME@@ terminal daemon
 .SH "SYNOPSIS"
@@ -182,11 +189,11 @@ This is a useful invocation of \fB@@RXVT_NAME@@d\fR in a \fI.xsession\fR\-style
 script:
 .PP
 .Vb 1
-\&   @@RXVT_NAME@@d -q -f -o
+\&   @@RXVT_NAME@@d \-q \-f \-o
 .Ve
 .PP
 This waits till the control socket is available, opens the current display
-and forks into the background. When you log\-out, the server is reset and
+and forks into the background. When you log-out, the server is reset and
 \&\fB@@RXVT_NAME@@d\fR is killed.
 .SH "ENVIRONMENT"
 .IX Header "ENVIRONMENT"
@@ -194,9 +201,8 @@ and forks into the background. When you log\-out, the server is reset and
 .IX Item "RXVT_SOCKET"
 Both \fB@@RXVT_NAME@@c\fR and \fB@@RXVT_NAME@@d\fR use the environment
 variable \fI\s-1RXVT_SOCKET\s0\fR to create a listening socket and to contact
-the @@RXVT_NAME@@d, respectively. If the variable is missing,
-\&\fI$HOME/.rxvt\-unicode\-\fI<nodename>\fI\fR is used. The variable must
-specify the absolute path of the socket to create.
+the @@RXVT_NAME@@d, respectively. If the variable is missing then
+\&\fI\f(CI$HOME\fI/.rxvt\-unicode\-\fI<nodename>\fI\fR is used.
 .IP "\fB\s-1DISPLAY\s0\fR" 4
 .IX Item "DISPLAY"
 Only used when the \f(CW\*(C`\-\-opendisplay\*(C'\fR option is specified. Must contain a
